# fast-serve

./: README.md  pyproject.toml
examples/: minimal.py  request_parsing.py
fast_serve/: __init__.py  app.py
tests/: test_app.py
