[project]
name = "fast-serve"
version = "0.1.0"
description = ""
authors = [
    {name = "Hsuan-Hau Liu",email = "hsuanhauliu@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "fastapi (>=0.115.12,<0.116.0)",
]

[tool.poetry]
packages = [{include = "fast_serve", from = "."}]

[tool.poetry.group.dev.dependencies]
black = "^25.1.0"
isort = "^6.0.1"
uvicorn = "^0.34.2"
pytest = "^8.4.1"
httpx = "^0.28.1"
fastapi = {version = "0.115.12", extras = ["all"]}

[tool.black]
line-length = 120

[tool.isort]
profile = "black"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
